# SSprofiler

./: .clang-format  CMakeLists.txt  LICENSE  README.md
source/: frdProfile.cpp  frdProfile.hpp
